showroom and form page

--- a/app.html
+++ b/app.html
@@ -33,8 +33,8 @@
       </ul>
       <div class="header-btn">
          <!--Krijo folderin e veqant per login dhe registere dhe shto destinacionin e tyre-->
-        <a href="" class="regjistrohu">Regjistrohu</a>
-        <a href="" class="kyqu">Kyqu</a>
+        <a href="./Form/form.html" class="regjistrohu">Regjistrohu</a>
+        <a href="./Form/form.html" class="kyqu">Kyqu</a>
       </div>
     </header>
 
