--- a/app.html
+++ b/app.html
@@ -17,11 +17,12 @@
   <body>
     <!--Headeri-->
     <header>
-      <a href="#" class="logo"
-        ><img
-          src="Images/LogoSample_ByTailorBrands-removebg-preview.png"
-          alt=""
-      /></a>
+      <a href="#" class="logo">
+        <img style="width: 100px;"
+          src="Images/LogoEagle.png"
+          alt="LogoEagle"
+      />
+    </a>
 
       <div class="bx bx-menu" id="menu-icon"></div>
 
@@ -90,6 +91,19 @@
     </section>
 
     <!--Shtoje showroom section poshte ksaj-->
+
+    <section><br><br></section>
+
+    <section class="sherbimet" id="sherbimet">
+      <div class="CTA">
+        <img class="CTAshowroom" src="Images/CTAshowroom.png" alt="CTAshowroom">
+      </div>
+      <div class="CTA">
+        <a class="CTAbutton" href="showroom.html">Visit now</a>
+      </div>
+    </section>
+
+    <section><br><br></section>
     
 
     <!--Rreth nesh-->
