buyform and more

--- a/app.html
+++ b/app.html
@@ -133,10 +133,26 @@
     <!--Shto footerin ne fund te faqes-->
 
     <!--Footer-->
-    <section class="footer">
-     
-    </section>
-
+    <div style="background-color: rgb(207, 202, 202); padding: 25px;" class="footer-content">
+      <img src="./Images/LogoEagle.png" alt="Dealership Logo" class="footer-logo">
+      <nav class="footer-nav">
+          <ul>
+              <li><a href="#faqjakryesore">Faqja Kryesore</a></li>
+              <li><a href="#blej">Blej</a></li>
+              <li><a href="#sherbimet">Sherbimet</a></li>
+              <li><a href="#rrethnesh">Rreth Nesh</a></li>
+          </ul>
+      </nav>
+      <div class="social-links">
+          <a href="https://www.facebook.com/" class="social-link">Facebook</a>
+          <a href="https://twitter.com/" class="social-link">Twitter</a>
+          <a href="https://www.instagram.com/" class="social-link">Instagram</a>
+      </div>
+  </div>
+  <div class="footer-bottom">
+      <p>© 2023 Eagle, Inc. All rights reserved.</p>
+  </div>
+</footer>
     <!--Scroll Reveal-->
     <script src="https://unpkg.com/scrollreveal"></script>
 
