--- a/showroom.html
+++ b/showroom.html
@@ -39,7 +39,7 @@
   
           <div class="box">
             <div class="box-img">
-              <img src="Images/Audi-removebg-preview.png" alt="" />
+              <img src="Images/audi-removebg-preview copy.png" alt="" />
             </div>
             <p>2020</p>
             <h3>AUDI A5 40 TDI S-Line</h3>
@@ -77,6 +77,101 @@
             <a href="buyform.html" class="btn">Blej Tani</a>
           </div>
 
+          <!-- new cars are below -->
+          
+          <div class="box">
+            <div class="box-img">
+              <img src="Images/Urus-removebg-preview.png" alt="" />
+            </div>
+            <p>2023</p>
+            <h3>MERCEDES GLE 400D Amg Line / 4Matic</h3>
+            <h2>135000€</h2>
+            <a href="buyform.html" class="btn">Blej Tani</a>
+          </div>
+
+          <div class="box">
+            <div class="box-img">
+              <img src="Images/Tuareg-removebg-preview.png" alt="" />
+            </div>
+            <p>2023</p>
+            <h3>MERCEDES GLE 400D Amg Line / 4Matic</h3>
+            <h2>135000€</h2>
+            <a href="buyform.html" class="btn">Blej Tani</a>
+          </div>
+
+          <div class="box">
+            <div class="box-img">
+              <img src="Images/S_class-removebg-preview.png" alt="" />
+            </div>
+            <p>2023</p>
+            <h3>MERCEDES GLE 400D Amg Line / 4Matic</h3>
+            <h2>135000€</h2>
+            <a href="buyform.html" class="btn">Blej Tani</a>
+          </div>
+
+          <div class="box">
+            <div class="box-img">
+              <img src="Images/G_class-removebg-preview.png" alt="" />
+            </div>
+            <p>2023</p>
+            <h3>MERCEDES GLE 400D Amg Line / 4Matic</h3>
+            <h2>135000€</h2>
+            <a href="buyform.html" class="btn">Blej Tani</a>
+          </div>
+
+          <div class="box">
+            <div class="box-img">
+              <img src="Images/bmwx6-removebg-preview.png" alt="" />
+            </div>
+            <p>2023</p>
+            <h3>MERCEDES GLE 400D Amg Line / 4Matic</h3>
+            <h2>135000€</h2>
+            <a href="buyform.html" class="btn">Blej Tani</a>
+          </div>
+
+          <div class="box">
+            <div class="box-img">
+              <img src="Images/Bmw-removebg-preview.png" alt="" />
+            </div>
+            <p>2023</p>
+            <h3>MERCEDES GLE 400D Amg Line / 4Matic</h3>
+            <h2>135000€</h2>
+            <a href="buyform.html" class="btn">Blej Tani</a>
+          </div>
+
+          <div class="box">
+            <div class="box-img">
+              <img src="Images/bmwere-removebg-preview.png" alt="" />
+            </div>
+            <p>2023</p>
+            <h3>MERCEDES GLE 400D Amg Line / 4Matic</h3>
+            <h2>135000€</h2>
+            <a href="buyform.html" class="btn">Blej Tani</a>
+          </div>
+
+          <div class="box">
+            <div class="box-img">
+              <img src="Images/Audi-removebg-preview.png" alt="" />
+            </div>
+            <p>2023</p>
+            <h3>MERCEDES GLE 400D Amg Line / 4Matic</h3>
+            <h2>135000€</h2>
+            <a href="buyform.html" class="btn">Blej Tani</a>
+          </div>
+
+          <div class="box">
+            <div class="box-img">
+              <img src="Images/audiq3-removebg-preview.png" alt="" />
+            </div>
+            <p>2023</p>
+            <h3>MERCEDES GLE 400D Amg Line / 4Matic</h3>
+            <h2>135000€</h2>
+            <a href="buyform.html" class="btn">Blej Tani</a>
+          </div>
+
+          
+
+
           <!-- Display Pop up code: posht -->
 
           <div id="carPopup" class="car-popup">
@@ -92,8 +187,14 @@
                 </div>
             </div>
         </div>
-  
+
+        <!-- butoni kthyes -->
+        <div class="CTA">
+          <a class="CTAbutton" href="app.html">Home</a>
+        </div>
+      </section>
 </body>
+
 
 <script>
 
