--- a/showroom.html
+++ b/showroom.html
@@ -84,8 +84,8 @@
               <img src="Images/Urus-removebg-preview.png" alt="" />
             </div>
             <p>2023</p>
-            <h3>MERCEDES GLE 400D Amg Line / 4Matic</h3>
-            <h2>135000€</h2>
+            <h3>Lamborghini URUS modified</h3>
+            <h2>335000€</h2>
             <a href=".//Form/buyform.html" class="btn">Blej Tani</a>
           </div>
 
@@ -94,8 +94,8 @@
               <img src="Images/Tuareg-removebg-preview.png" alt="" />
             </div>
             <p>2023</p>
-            <h3>MERCEDES GLE 400D Amg Line / 4Matic</h3>
-            <h2>135000€</h2>
+            <h3>VolsWagen Taureg </h3>
+            <h2>205000€</h2>
             <a href=".//Form/buyform.html" class="btn">Blej Tani</a>
           </div>
 
@@ -104,8 +104,8 @@
               <img src="Images/S_class-removebg-preview.png" alt="" />
             </div>
             <p>2023</p>
-            <h3>MERCEDES GLE 400D Amg Line / 4Matic</h3>
-            <h2>135000€</h2>
+            <h3>MERCEDES S-class / 4Matic</h3>
+            <h2>689000€</h2>
             <a href=".//Form/buyform.html" class="btn">Blej Tani</a>
           </div>
 
