--- a/showroom.html
+++ b/showroom.html
@@ -114,8 +114,8 @@
               <img src="Images/G_class-removebg-preview.png" alt="" />
             </div>
             <p>2023</p>
-            <h3>MERCEDES GLE 400D Amg Line / 4Matic</h3>
-            <h2>135000€</h2>
+            <h3>MERCEDES G Class Amg Line / 4Matic</h3>
+            <h2>500000€</h2>
             <a href=".//Form/buyform.html" class="btn">Blej Tani</a>
           </div>
 
@@ -124,7 +124,7 @@
               <img src="Images/bmwx6-removebg-preview.png" alt="" />
             </div>
             <p>2023</p>
-            <h3>MERCEDES GLE 400D Amg Line / 4Matic</h3>
+            <h3>BMW X6</h3>
             <h2>135000€</h2>
             <a href=".//Form/buyform.html" class="btn">Blej Tani</a>
           </div>
@@ -134,7 +134,7 @@
               <img src="Images/Bmw-removebg-preview.png" alt="" />
             </div>
             <p>2023</p>
-            <h3>MERCEDES GLE 400D Amg Line / 4Matic</h3>
+            <h3>BMW M5 COMP</h3>
             <h2>135000€</h2>
             <a href=".//Form/buyform.html" class="btn">Blej Tani</a>
           </div>
@@ -144,7 +144,7 @@
               <img src="Images/bmwere-removebg-preview.png" alt="" />
             </div>
             <p>2023</p>
-            <h3>MERCEDES GLE 400D Amg Line / 4Matic</h3>
+            <h3>BMW x7</h3>
             <h2>135000€</h2>
             <a href=".//Form/buyform.html" class="btn">Blej Tani</a>
           </div>
@@ -154,7 +154,7 @@
               <img src="Images/Audi-removebg-preview.png" alt="" />
             </div>
             <p>2023</p>
-            <h3>MERCEDES GLE 400D Amg Line / 4Matic</h3>
+            <h3>Audi Q8 quattro</h3>
             <h2>135000€</h2>
             <a href=".//Form/buyform.html" class="btn">Blej Tani</a>
           </div>
@@ -164,7 +164,7 @@
               <img src="Images/audiq3-removebg-preview.png" alt="" />
             </div>
             <p>2023</p>
-            <h3>MERCEDES GLE 400D Amg Line / 4Matic</h3>
+            <h3>Audi Q3 sportback</h3>
             <h2>135000€</h2>
             <a href=".//Form/buyform.html" class="btn">Blej Tani</a>
           </div>
