--- a/showroom.html
+++ b/showroom.html
@@ -10,7 +10,7 @@
 <!--Showroomi-->
     <section class="sherbimet" id="sherbimet">
         <div class="heading">
-          <h1>Showroomi jonë</h1>
+          <h1>Showroom</h1>
           <span>
             Eksploro ofertat më të mira <br />
             nga kompania jonë
@@ -77,14 +77,14 @@
             <a href=".//Form/buyform.html" class="btn">Blej Tani</a>
           </div>
 
-          <!-- new cars are below -->
+          <!-- Vetura te shtuara -->
           
           <div class="box">
             <div class="box-img">
               <img src="Images/Urus-removebg-preview.png" alt="" />
             </div>
             <p>2023</p>
-            <h3>Lamborghini URUS modified</h3>
+            <h3>Lamborghini URUS </h3>
             <h2>335000€</h2>
             <a href=".//Form/buyform.html" class="btn">Blej Tani</a>
           </div>
@@ -94,8 +94,8 @@
               <img src="Images/Tuareg-removebg-preview.png" alt="" />
             </div>
             <p>2023</p>
-            <h3>VolsWagen Taureg </h3>
-            <h2>205000€</h2>
+            <h3>Volkswagen Taureg </h3>
+            <h2>76000€</h2>
             <a href=".//Form/buyform.html" class="btn">Blej Tani</a>
           </div>
 
@@ -105,7 +105,7 @@
             </div>
             <p>2023</p>
             <h3>MERCEDES S-class / 4Matic</h3>
-            <h2>689000€</h2>
+            <h2>1070898€</h2>
             <a href=".//Form/buyform.html" class="btn">Blej Tani</a>
           </div>
 
@@ -115,7 +115,7 @@
             </div>
             <p>2023</p>
             <h3>MERCEDES G Class Amg Line / 4Matic</h3>
-            <h2>500000€</h2>
+            <h2>200045€</h2>
             <a href=".//Form/buyform.html" class="btn">Blej Tani</a>
           </div>
 
@@ -125,7 +125,7 @@
             </div>
             <p>2023</p>
             <h3>BMW X6</h3>
-            <h2>135000€</h2>
+            <h2>115080€</h2>
             <a href=".//Form/buyform.html" class="btn">Blej Tani</a>
           </div>
 
@@ -134,8 +134,8 @@
               <img src="Images/Bmw-removebg-preview.png" alt="" />
             </div>
             <p>2023</p>
-            <h3>BMW M5 COMP</h3>
-            <h2>135000€</h2>
+            <h3>BMW M5 COMPETITION</h3>
+            <h2>116045€</h2>
             <a href=".//Form/buyform.html" class="btn">Blej Tani</a>
           </div>
 
@@ -144,7 +144,7 @@
               <img src="Images/bmwere-removebg-preview.png" alt="" />
             </div>
             <p>2023</p>
-            <h3>BMW x7</h3>
+            <h3>BMW X7</h3>
             <h2>135000€</h2>
             <a href=".//Form/buyform.html" class="btn">Blej Tani</a>
           </div>
@@ -154,8 +154,8 @@
               <img src="Images/Audi-removebg-preview.png" alt="" />
             </div>
             <p>2023</p>
-            <h3>Audi Q8 quattro</h3>
-            <h2>135000€</h2>
+            <h3>Audi Q8 Quattro</h3>
+            <h2>96000€</h2>
             <a href=".//Form/buyform.html" class="btn">Blej Tani</a>
           </div>
 
@@ -164,8 +164,8 @@
               <img src="Images/audiq3-removebg-preview.png" alt="" />
             </div>
             <p>2023</p>
-            <h3>Audi Q3 sportback</h3>
-            <h2>135000€</h2>
+            <h3>Audi Q3 Sportback</h3>
+            <h2>81000€</h2>
             <a href=".//Form/buyform.html" class="btn">Blej Tani</a>
           </div>
 
